# pathways-cli

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  plan.md  pyproject.toml
src/pwy/: __init__.py  cli.py  generator.py  kubernetes.py  sync.py  templates.py
tests/: __init__.py  example_jax_program.py  test_cli.py  test_e2e.py  test_generator.py  test_sync.py
