[project]
name = "pwy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sam Stoelinga", email = "sammiestoel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
]

[project.scripts]
pwy = "pwy:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
