[project]
name = "pathways-cli"
version = "0.1.1"
description = "Pathways CLI to easily bring up pathways clusters."
readme = "README.md"
authors = [
    { name = "Sam Stoelinga", email = "sammiestoel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "python-dotenv>=1.2.2",
    "watchdog>=6.0.0",
]

[project.scripts]
pwy = "pwy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pwy"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end integration tests",
]
